--- a/tool/CMakeLists.txt
+++ b/tool/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.14)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_FLAGS_RELEASE "-O3")
 
 project(SACA)
 
